# AURENIX

./: .gitignore  CLAUDE.md  CNAME  README.md  handoff.md  handover_sesion_marzo.md  index.html  prompt_experto_agencia.md  script.js  styles.css
.claude/: handoff.md  plan.md  settings.local.json
_PROJECTS/AURENIX AGENCY/aurenix-monorepo/apps/api-gateway/: Dockerfile  pyproject.toml
_PROJECTS/AURENIX AGENCY/aurenix-monorepo/apps/api-gateway/src/: admin.py  main.py
_PROJECTS/AURENIX AGENCY/aurenix-monorepo/apps/temporal-worker/: Dockerfile  pyproject.toml
_PROJECTS/AURENIX AGENCY/aurenix-monorepo/apps/temporal-worker/core_engine/src/: agent.py
_PROJECTS/AURENIX AGENCY/aurenix-monorepo/apps/temporal-worker/src/: activities.py  config_manager.py  interceptors.py  logger_config.py  run_agency_campaign.py  test_auth.py  worker.py  workflows.py
_PROJECTS/AURENIX AGENCY/aurenix-monorepo/apps/temporal-worker/src/graphs/: auditor.py
_PROJECTS/AURENIX AGENCY/aurenix-monorepo/apps/temporal-worker/src/prompts/: registry.py
_PROJECTS/AURENIX AGENCY/aurenix-monorepo/apps/temporal-worker/src/services/: vertex_ai.py
_PROJECTS/AURENIX AGENCY/aurenix-monorepo/apps/temporal-worker/src/telemetry/: models.py  productivity.py  tracker.py
_PROJECTS/AURENIX AGENCY/aurenix-monorepo/apps/temporal-worker/src/tools/: billing.py  browser.py  code_sandbox.py  crm_adapters.py  database.py  generic_api.py  google_workspace.py  ledger.py  roi_evidence.py  security.py  vertex_search.py
_PROJECTS/AURENIX AGENCY/aurenix-monorepo/apps/temporal-worker/src/tools/registry/: discovery.py
(+257 files in other folders)
